domain: gitter.im

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -5,3 +5,4 @@ address=/google.com/216.58.211.100
 address=/www.google.com/172.217.22.164
 address=/mail.google.com/173.194.220.17
 address=/play.google.com/173.194.222.200
+address=/gitter.im/52.20.217.175
