--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,8 +1,9 @@
 address=/.lb.slack-msgs.com/13.115.224.139
-address=/everything.lb.slack-msgs.com/13.115.224.139
-address=/fonts.googleapis.com/173.194.220.95
-address=/google.com/216.58.211.100
-address=/www.google.com/172.217.22.164
-address=/mail.google.com/173.194.220.17
-address=/play.google.com/173.194.222.200
-address=/gitter.im/52.20.217.175
+
+host-record=everything.lb.slack-msgs.com,13.115.224.139
+host-record=fonts.googleapis.com,173.194.220.95
+host-record=google.com,216.58.211.100
+host-record=www.google.com,172.217.22.164
+host-record=mail.google.com,173.194.220.17
+host-record=play.google.com,173.194.222.200
+host-record=gitter.im,52.20.217.175
