--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -7,3 +7,14 @@ host-record=www.google.com,172.217.22.164
 host-record=mail.google.com,173.194.220.17
 host-record=play.google.com,173.194.222.200
 host-record=gitter.im,52.20.217.175
+host-record=ws.gitter.im,52.6.20.193
+host-record=cdn01.gitter.im,52.85.173.188
+host-record=cdn02.gitter.im,52.85.173.188
+host-record=cdn03.gitter.im,52.85.173.188
+host-record=cdn04.gitter.im,52.85.173.188
+host-record=cdn05.gitter.im,52.85.173.188
+host-record=avatars-01.gitter.im,54.192.27.92
+host-record=avatars-02.gitter.im,54.192.27.92
+host-record=avatars-03.gitter.im,54.192.27.92
+host-record=avatars-04.gitter.im,54.192.27.92
+host-record=avatars-05.gitter.im,54.192.27.92
