--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,4 +1,5 @@
 address=/.lb.slack-msgs.com/13.115.224.139
+address=/.slack.com/54.192.47.108
 
 host-record=slack.com,52.85.217.57
 host-record=everything.lb.slack-msgs.com,13.115.224.139
