--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -21,3 +21,4 @@ host-record=avatars-02.gitter.im,54.192.27.92
 host-record=avatars-03.gitter.im,54.192.27.92
 host-record=avatars-04.gitter.im,54.192.27.92
 host-record=avatars-05.gitter.im,54.192.27.92
+host-record=developer.android.com,64.233.165.101
