clients*.google.com

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -9,6 +9,12 @@ host-record=google.com,216.58.211.100
 host-record=www.google.com,172.217.22.164
 host-record=mail.google.com,173.194.220.17
 host-record=play.google.com,173.194.222.200
+host-record=clients1.google.com,172.217.17.142
+host-record=clients2.google.com,172.217.17.142
+host-record=clients3.google.com,172.217.17.142
+host-record=clients4.google.com,172.217.17.142
+host-record=clients5.google.com,172.217.17.142
+host-record=clients6.google.com,172.217.17.142
 host-record=gitter.im,52.20.217.175
 host-record=ws.gitter.im,52.6.20.193
 host-record=cdn01.gitter.im,52.85.173.188
