hangouts.google.com and more

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -7,8 +7,12 @@ host-record=slack-redir.net,52.54.244.70
 host-record=fonts.googleapis.com,173.194.220.95
 host-record=google.com,216.58.211.100
 host-record=www.google.com,172.217.22.164
+host-record=googlemail.l.google.com,173.194.220.17
 host-record=mail.google.com,173.194.220.17
+host-record=play.l.google.com,173.194.222.200
 host-record=play.google.com,173.194.222.200
+host-record=plus.l.google.com,173.194.222.196
+host-record=apis.google.com,173.194.222.196
 host-record=clients1.google.com,172.217.17.142
 host-record=clients2.google.com,172.217.17.142
 host-record=clients3.google.com,172.217.17.142
@@ -27,5 +31,8 @@ host-record=avatars-02.gitter.im,54.192.27.92
 host-record=avatars-03.gitter.im,54.192.27.92
 host-record=avatars-04.gitter.im,54.192.27.92
 host-record=avatars-05.gitter.im,54.192.27.92
+host-record=www3.l.google.com,64.233.165.101
+host-record=ogs.google.com,64.233.165.101
+host-record=hangouts.google.com,64.233.165.101
 host-record=developer.android.com,64.233.165.101
 host-record=www.android.com,64.233.165.101
