notifications.google.com

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -13,6 +13,7 @@ host-record=play.l.google.com,173.194.222.200
 host-record=play.google.com,173.194.222.200
 host-record=plus.l.google.com,173.194.222.196
 host-record=apis.google.com,173.194.222.196
+host-record=notifications.google.com,173.194.222.196
 host-record=clients1.google.com,172.217.17.142
 host-record=clients2.google.com,172.217.17.142
 host-record=clients3.google.com,172.217.17.142
