--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -12,6 +12,7 @@ host-record=mail.google.com,173.194.220.17
 host-record=play.l.google.com,173.194.222.200
 host-record=play.google.com,173.194.222.200
 host-record=plus.l.google.com,173.194.222.196
+host-record=plus.google.com,173.194.222.196
 host-record=apis.google.com,173.194.222.196
 host-record=notifications.google.com,173.194.222.196
 host-record=clients1.google.com,172.217.17.142
