*.cdn.skype.com

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -40,3 +40,4 @@ host-record=ogs.google.com,64.233.165.101
 host-record=hangouts.google.com,64.233.165.101
 host-record=developer.android.com,64.233.165.101
 host-record=www.android.com,64.233.165.101
+host-record=s4w.cdn.skype.com,72.21.81.200
