--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -42,3 +42,5 @@ host-record=developer.android.com,64.233.165.101
 host-record=www.android.com,64.233.165.101
 host-record=s4w.cdn.skype.com,72.21.81.200
 host-record=api.nuget.org,72.21.81.200
+host-record=amp.azure.net,72.21.81.200
+host-record=azurecomcdn.azureedge.net,72.21.81.200
