--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -23,6 +23,7 @@ host-record=clients3.google.com,172.217.17.142
 host-record=clients4.google.com,172.217.17.142
 host-record=clients5.google.com,172.217.17.142
 host-record=clients6.google.com,172.217.17.142
+host-record=maps.gstatic.com,64.233.165.94
 host-record=gitter.im,52.20.217.175
 host-record=ws.gitter.im,52.6.20.193
 host-record=cdn01.gitter.im,52.85.173.188
