developer.mozilla.org

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -45,3 +45,4 @@ host-record=s4w.cdn.skype.com,72.21.81.200
 host-record=api.nuget.org,72.21.81.200
 host-record=amp.azure.net,72.21.81.200
 host-record=azurecomcdn.azureedge.net,72.21.81.200
+host-record=developer.mozilla.org,52.85.242.6
