--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -46,3 +46,4 @@ host-record=api.nuget.org,72.21.81.200
 host-record=amp.azure.net,72.21.81.200
 host-record=azurecomcdn.azureedge.net,72.21.81.200
 host-record=developer.mozilla.org,52.85.242.6
+host-record=s3-1-w.amazonaws.com,54.231.120.139
