--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -7,6 +7,8 @@ host-record=slack-redir.net,52.54.244.70
 host-record=fonts.googleapis.com,173.194.220.95
 host-record=google.com,216.58.211.100
 host-record=www.google.com,172.217.22.164
+host-record=google.ru,173.194.113.175
+host-record=www.google.ru,172.217.20.35
 host-record=googlemail.l.google.com,173.194.220.17
 host-record=mail.google.com,173.194.220.17
 host-record=play.l.google.com,173.194.222.200
