--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -49,3 +49,9 @@ host-record=amp.azure.net,72.21.81.200
 host-record=azurecomcdn.azureedge.net,72.21.81.200
 host-record=developer.mozilla.org,52.85.242.6
 host-record=s3-1-w.amazonaws.com,54.231.120.139
+host-record=www.researchgate.net,65.39.251.69
+host-record=c1.rgstatic.net,52.85.242.9
+host-record=c2.rgstatic.net,52.85.242.9
+host-record=c3.rgstatic.net,52.85.242.9
+host-record=c4.rgstatic.net,52.85.242.9
+host-record=c5.rgstatic.net,52.85.242.9
