--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -52,6 +52,8 @@ host-record=s3-1-w.amazonaws.com,54.231.120.139
 host-record=linkedin.com,108.174.10.11
 host-record=www.linkedin.com,108.174.10.11
 host-record=ru.linkedin.com,108.174.10.11
+host-record=archive.is,54.36.225.114
+host-record=archive.li,185.22.174.247
 host-record=www.researchgate.net,65.39.251.69
 host-record=c1.rgstatic.net,52.85.242.9
 host-record=c2.rgstatic.net,52.85.242.9
