--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -19,6 +19,8 @@ host-record=apis.google.com,173.194.222.196
 host-record=notifications.google.com,173.194.222.196
 host-record=books.google.com,216.58.219.206
 host-record=books-wide.l.google.com,216.58.219.206
+host-record=docs.google.com,173.194.222.194
+host-record=wide-docs.l.google.com,173.194.222.194
 host-record=clients1.google.com,172.217.17.142
 host-record=clients2.google.com,172.217.17.142
 host-record=clients3.google.com,172.217.17.142
