--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -52,6 +52,7 @@ host-record=azurecomcdn.azureedge.net,72.21.81.200
 host-record=developer.mozilla.org,52.85.242.6
 host-record=www.meteor.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
+host-record=lodash.com,54.93.128.64
 host-record=s3-1-w.amazonaws.com,54.231.120.139
 host-record=www.researchgate.net,65.39.251.69
 host-record=c1.rgstatic.net,52.85.242.9
