--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -21,6 +21,11 @@ host-record=books.google.com,216.58.219.206
 host-record=books-wide.l.google.com,216.58.219.206
 host-record=docs.google.com,173.194.222.194
 host-record=wide-docs.l.google.com,173.194.222.194
+host-record=ytstatic.l.google.com,64.233.161.138
+host-record=s.ytimg.com,64.233.161.138
+host-record=photos-ugc.l.googleusercontent.com,64.233.165.132
+host-record=yt3.ggpht.com,64.233.165.132
+host-record=yt4.ggpht.com,64.233.165.132
 host-record=clients1.google.com,172.217.17.142
 host-record=clients2.google.com,172.217.17.142
 host-record=clients3.google.com,172.217.17.142
