--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -55,6 +55,7 @@ host-record=api.nuget.org,72.21.81.200
 host-record=amp.azure.net,72.21.81.200
 host-record=azurecomcdn.azureedge.net,72.21.81.200
 host-record=developer.mozilla.org,52.85.242.6
+host-record=download.mozilla.org,52.22.228.211
 host-record=www.meteor.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
 host-record=lodash.com,54.93.128.64
