--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -4,6 +4,7 @@ address=/.slack.com/54.192.47.108
 host-record=slack.com,52.85.217.57
 host-record=everything.lb.slack-msgs.com,13.115.224.139
 host-record=slack-redir.net,52.54.244.70
+host-record=upload.slack.com,52.3.173.255
 host-record=fonts.googleapis.com,173.194.220.95
 host-record=google.com,216.58.211.100
 host-record=www.google.com,172.217.22.164
