--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -67,6 +67,7 @@ host-record=c2.rgstatic.net,52.85.242.9
 host-record=c3.rgstatic.net,52.85.242.9
 host-record=c4.rgstatic.net,52.85.242.9
 host-record=c5.rgstatic.net,52.85.242.9
+host-record=helpme.viber.com,50.17.89.124
 
 host-record=linkedin.com,108.174.10.11
 host-record=www.linkedin.com,108.174.10.11
