--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -62,6 +62,7 @@ host-record=www.lesswrong.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
 host-record=lodash.com,54.93.128.64
 host-record=s3-1-w.amazonaws.com,54.231.120.139
+host-record=s3.amazonaws.com,54.231.112.147
 host-record=www.researchgate.net,65.39.251.69
 host-record=c1.rgstatic.net,52.85.242.9
 host-record=c2.rgstatic.net,52.85.242.9
@@ -70,6 +71,7 @@ host-record=c4.rgstatic.net,52.85.242.9
 host-record=c5.rgstatic.net,52.85.242.9
 host-record=helpme.viber.com,50.17.89.124
 host-record=instagram.com,52.22.112.93
+
 
 host-record=linkedin.com,108.174.10.11
 host-record=www.linkedin.com,108.174.10.11
