--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,5 +1,6 @@
 address=/.lb.slack-msgs.com/13.115.224.139
 address=/.slack.com/54.192.47.108
+address=/.googleusercontent.com/64.233.165.132
 
 host-record=slack.com,52.85.217.57
 host-record=everything.lb.slack-msgs.com,13.115.224.139
@@ -24,6 +25,7 @@ host-record=docs.google.com,173.194.222.194
 host-record=wide-docs.l.google.com,173.194.222.194
 host-record=ytstatic.l.google.com,64.233.161.138
 host-record=s.ytimg.com,64.233.161.138
+host-record=googlehosted.l.googleusercontent.com,64.233.165.132
 host-record=photos-ugc.l.googleusercontent.com,64.233.165.132
 host-record=yt3.ggpht.com,64.233.165.132
 host-record=yt4.ggpht.com,64.233.165.132
