--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -76,6 +76,8 @@ host-record=helpme.viber.com,50.17.89.124
 host-record=instagram.com,52.22.112.93
 host-record=evernote.com,204.154.95.75
 host-record=www.evernote.com,204.154.95.75
+host-record=dx.doi.org,54.191.229.235
+host-record=dx.dyn.doi.org,54.191.229.235
 
 
 host-record=linkedin.com,108.174.10.11
