--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -64,6 +64,7 @@ host-record=addons.mozilla.org,52.89.239.72
 host-record=www.meteor.com,52.45.223.217
 host-record=www.lesswrong.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
+host-record=lesswrong.com,188.166.203.69
 host-record=lodash.com,54.93.128.64
 host-record=s3-1-w.amazonaws.com,54.231.120.139
 host-record=s3.amazonaws.com,54.231.112.147
