--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -82,6 +82,7 @@ host-record=www.evernote.com,204.154.95.75
 host-record=dx.doi.org,54.191.229.235
 host-record=dx.dyn.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
+host-record=hub.docker.com,52.22.228.13
 
 
 host-record=linkedin.com,108.174.10.11
