dokku.viewdocs.io

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -90,3 +90,9 @@ host-record=www.linkedin.com,108.174.10.11
 host-record=ru.linkedin.com,108.174.10.11
 host-record=archive.is,54.36.225.114
 host-record=archive.li,185.22.174.247
+
+host-record=dokku.viewdocs.io,54.164.102.190
+host-record=dokku.viewdocs.io,52.87.80.61
+host-record=dokku.viewdocs.io,54.173.244.230
+host-record=dokku.viewdocs.io,54.172.87.254
+host-record=dokku.viewdocs.io,54.174.71.128
