--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -18,22 +18,22 @@ host-record=google.com,216.58.211.100
 host-record=www.google.com,172.217.22.164
 host-record=google.ru,173.194.113.175
 host-record=www.google.ru,172.217.20.35
-host-record=googlemail.l.google.com,173.194.220.17
+# host-record=googlemail.l.google.com,173.194.220.17
 host-record=mail.google.com,173.194.220.17
-host-record=play.l.google.com,173.194.222.200
+# host-record=play.l.google.com,173.194.222.200
 host-record=play.google.com,173.194.222.200
-host-record=plus.l.google.com,173.194.222.196
+# host-record=plus.l.google.com,173.194.222.196
 host-record=plus.google.com,173.194.222.196
 host-record=apis.google.com,173.194.222.196
 host-record=notifications.google.com,173.194.222.196
 host-record=books.google.com,216.58.219.206
-host-record=books-wide.l.google.com,216.58.219.206
+# host-record=books-wide.l.google.com,216.58.219.206
 host-record=docs.google.com,173.194.222.194
-host-record=wide-docs.l.google.com,173.194.222.194
-host-record=ytstatic.l.google.com,64.233.161.138
+# host-record=wide-docs.l.google.com,173.194.222.194
+# host-record=ytstatic.l.google.com,64.233.161.138
 host-record=s.ytimg.com,64.233.161.138
-host-record=googlehosted.l.googleusercontent.com,64.233.165.132
-host-record=photos-ugc.l.googleusercontent.com,64.233.165.132
+# host-record=googlehosted.l.googleusercontent.com,64.233.165.132
+# host-record=photos-ugc.l.googleusercontent.com,64.233.165.132
 host-record=yt3.ggpht.com,64.233.165.132
 host-record=yt4.ggpht.com,64.233.165.132
 host-record=clients1.google.com,172.217.17.142
@@ -55,7 +55,7 @@ host-record=avatars-02.gitter.im,54.192.27.92
 host-record=avatars-03.gitter.im,54.192.27.92
 host-record=avatars-04.gitter.im,54.192.27.92
 host-record=avatars-05.gitter.im,54.192.27.92
-host-record=www3.l.google.com,64.233.165.101
+#host-record=www3.l.google.com,64.233.165.101
 host-record=ogs.google.com,64.233.165.101
 host-record=hangouts.google.com,64.233.165.101
 host-record=developer.android.com,64.233.165.101
