--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -44,12 +44,12 @@ host-record=clients5.google.com,172.217.17.142
 host-record=clients6.google.com,172.217.17.142
 host-record=maps.gstatic.com,64.233.165.94
 host-record=gitter.im,52.20.217.175
-host-record=ws.gitter.im,52.6.20.193
+host-record=ws.gitter.im,52.86.120.172
 host-record=cdn01.gitter.im,52.85.173.188
 host-record=cdn02.gitter.im,52.85.173.188
 host-record=cdn03.gitter.im,52.85.173.188
 host-record=cdn04.gitter.im,52.85.173.188
-host-record=cdn05.gitter.im,52.85.173.188
+#host-record=cdn05.gitter.im,52.85.173.188
 host-record=avatars-01.gitter.im,54.192.27.92
 host-record=avatars-02.gitter.im,54.192.27.92
 host-record=avatars-03.gitter.im,54.192.27.92
