--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -84,8 +84,8 @@ host-record=helpme.viber.com,50.17.89.124
 host-record=instagram.com,52.22.112.93
 host-record=evernote.com,204.154.95.75
 host-record=www.evernote.com,204.154.95.75
+#host-record=dx.dyn.doi.org,54.191.229.235
 host-record=dx.doi.org,54.191.229.235
-host-record=dx.dyn.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
 host-record=hub.docker.com,52.22.228.13
 
