replicate.npmjs.com (npm, Inc.)

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -8,6 +8,7 @@ address=/.viewdocs.io/54.174.71.128
 address=/.viewdocs.io/54.164.102.190
 
 host-record=www.npmjs.com,104.16.109.31
+host-record=replicate.npmjs.com,104.16.109.31
 host-record=slack.com,52.85.217.57
 host-record=everything.lb.slack-msgs.com,13.115.224.139
 host-record=slack-redir.net,52.203.31.227
