--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -14,6 +14,47 @@ host-record=everything.lb.slack-msgs.com,13.115.224.139
 host-record=slack-redir.net,52.203.31.227
 host-record=slack-imgs.com,54.230.92.27
 host-record=upload.slack.com,52.54.220.150
+host-record=gitter.im,52.20.217.175
+host-record=ws.gitter.im,52.86.120.172
+host-record=cdn01.gitter.im,52.85.173.188
+host-record=cdn02.gitter.im,52.85.173.188
+host-record=cdn03.gitter.im,52.85.173.188
+host-record=cdn04.gitter.im,52.85.173.188
+#host-record=cdn05.gitter.im,52.85.173.188
+host-record=avatars-01.gitter.im,54.192.27.92
+host-record=avatars-02.gitter.im,54.192.27.92
+host-record=avatars-03.gitter.im,54.192.27.92
+host-record=avatars-04.gitter.im,54.192.27.92
+host-record=avatars-05.gitter.im,54.192.27.92
+host-record=s4w.cdn.skype.com,72.21.81.200
+host-record=api.nuget.org,72.21.81.200
+host-record=amp.azure.net,72.21.81.200
+host-record=azurecomcdn.azureedge.net,72.21.81.200
+host-record=developer.mozilla.org,52.85.242.6
+host-record=download.mozilla.org,52.203.116.202
+host-record=addons.mozilla.org,52.89.239.72
+host-record=discovery.addons.mozilla.org,52.89.239.72
+host-record=www.meteor.com,52.45.223.217
+host-record=www.lesswrong.com,52.45.223.217
+host-record=meteor.com,52.85.242.34
+host-record=lodash.com,54.93.128.64
+host-record=s3.amazonaws.com,54.231.112.147
+host-record=www.researchgate.net,65.39.251.69
+host-record=c1.rgstatic.net,52.85.242.9
+host-record=c2.rgstatic.net,52.85.242.9
+host-record=c3.rgstatic.net,52.85.242.9
+host-record=c4.rgstatic.net,52.85.242.9
+host-record=c5.rgstatic.net,52.85.242.9
+host-record=helpme.viber.com,50.17.89.124
+host-record=instagram.com,52.22.112.93
+host-record=evernote.com,204.154.95.75
+host-record=www.evernote.com,204.154.95.75
+#host-record=dx.dyn.doi.org,54.191.229.235
+host-record=dx.doi.org,54.191.229.235
+host-record=avatar-cdn.atlassian.com,13.32.14.208
+host-record=hub.docker.com,52.22.228.13
+
+# Google
 host-record=fonts.googleapis.com,173.194.220.95
 host-record=google.com,216.58.211.100
 host-record=www.google.com,172.217.22.164
@@ -44,52 +85,13 @@ host-record=clients4.google.com,172.217.17.142
 host-record=clients5.google.com,172.217.17.142
 host-record=clients6.google.com,172.217.17.142
 host-record=maps.gstatic.com,64.233.165.94
-host-record=gitter.im,52.20.217.175
-host-record=ws.gitter.im,52.86.120.172
-host-record=cdn01.gitter.im,52.85.173.188
-host-record=cdn02.gitter.im,52.85.173.188
-host-record=cdn03.gitter.im,52.85.173.188
-host-record=cdn04.gitter.im,52.85.173.188
-#host-record=cdn05.gitter.im,52.85.173.188
-host-record=avatars-01.gitter.im,54.192.27.92
-host-record=avatars-02.gitter.im,54.192.27.92
-host-record=avatars-03.gitter.im,54.192.27.92
-host-record=avatars-04.gitter.im,54.192.27.92
-host-record=avatars-05.gitter.im,54.192.27.92
 #host-record=www3.l.google.com,64.233.165.101
 host-record=ogs.google.com,64.233.165.101
 host-record=hangouts.google.com,64.233.165.101
 host-record=developer.android.com,64.233.165.101
 host-record=www.android.com,64.233.165.101
-host-record=s4w.cdn.skype.com,72.21.81.200
-host-record=api.nuget.org,72.21.81.200
-host-record=amp.azure.net,72.21.81.200
-host-record=azurecomcdn.azureedge.net,72.21.81.200
-host-record=developer.mozilla.org,52.85.242.6
-host-record=download.mozilla.org,52.203.116.202
-host-record=addons.mozilla.org,52.89.239.72
-host-record=discovery.addons.mozilla.org,52.89.239.72
-host-record=www.meteor.com,52.45.223.217
-host-record=www.lesswrong.com,52.45.223.217
-host-record=meteor.com,52.85.242.34
-host-record=lodash.com,54.93.128.64
-host-record=s3.amazonaws.com,54.231.112.147
-host-record=www.researchgate.net,65.39.251.69
-host-record=c1.rgstatic.net,52.85.242.9
-host-record=c2.rgstatic.net,52.85.242.9
-host-record=c3.rgstatic.net,52.85.242.9
-host-record=c4.rgstatic.net,52.85.242.9
-host-record=c5.rgstatic.net,52.85.242.9
-host-record=helpme.viber.com,50.17.89.124
-host-record=instagram.com,52.22.112.93
-host-record=evernote.com,204.154.95.75
-host-record=www.evernote.com,204.154.95.75
-#host-record=dx.dyn.doi.org,54.191.229.235
-host-record=dx.doi.org,54.191.229.235
-host-record=avatar-cdn.atlassian.com,13.32.14.208
-host-record=hub.docker.com,52.22.228.13
 
-
+# Blocked
 host-record=linkedin.com,108.174.10.11
 host-record=www.linkedin.com,108.174.10.11
 host-record=ru.linkedin.com,108.174.10.11
