--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -32,8 +32,8 @@ host-record=amp.azure.net,72.21.81.200
 host-record=azurecomcdn.azureedge.net,72.21.81.200
 host-record=developer.mozilla.org,52.85.242.6
 host-record=download.mozilla.org,52.10.102.219
-host-record=addons.mozilla.org,52.89.239.72
-host-record=discovery.addons.mozilla.org,52.89.239.72
+#host-record=addons.mozilla.org,52.89.239.72
+#host-record=discovery.addons.mozilla.org,52.89.239.72
 host-record=www.meteor.com,52.45.223.217
 host-record=www.lesswrong.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
