Split into blocks

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,3 +1,4 @@
+# Wildcards
 address=/.lb.slack-msgs.com/13.115.224.139
 address=/.slack.com/54.192.47.108
 address=/.googleusercontent.com/64.233.165.132
@@ -7,8 +8,7 @@ address=/.viewdocs.io/52.87.80.61
 #address=/.viewdocs.io/54.174.71.128
 #address=/.viewdocs.io/54.164.102.190
 
-host-record=www.npmjs.com,104.16.109.31
-host-record=replicate.npmjs.com,104.16.109.31
+# Amazon
 host-record=slack.com,52.85.217.57
 host-record=everything.lb.slack-msgs.com,13.115.224.139
 host-record=slack-redir.net,52.203.31.227
@@ -26,10 +26,6 @@ host-record=avatars-02.gitter.im,54.192.27.92
 host-record=avatars-03.gitter.im,54.192.27.92
 host-record=avatars-04.gitter.im,54.192.27.92
 host-record=avatars-05.gitter.im,54.192.27.92
-host-record=s4w.cdn.skype.com,72.21.81.200
-host-record=api.nuget.org,72.21.81.200
-host-record=amp.azure.net,72.21.81.200
-host-record=azurecomcdn.azureedge.net,72.21.81.200
 host-record=developer.mozilla.org,52.85.242.6
 host-record=download.mozilla.org,52.10.102.219
 #host-record=addons.mozilla.org,52.89.239.72
@@ -53,6 +49,16 @@ host-record=www.evernote.com,204.154.95.75
 host-record=dx.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
 host-record=hub.docker.com,52.22.228.13
+
+# Microsoft
+host-record=s4w.cdn.skype.com,72.21.81.200
+host-record=api.nuget.org,72.21.81.200
+host-record=amp.azure.net,72.21.81.200
+host-record=azurecomcdn.azureedge.net,72.21.81.200
+
+# Cloudflare
+host-record=www.npmjs.com,104.16.109.31
+host-record=replicate.npmjs.com,104.16.109.31
 
 ## Google
 #host-record=fonts.googleapis.com,173.194.220.95
