researchgate is not on Amazon

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -36,7 +36,6 @@ host-record=www.lesswrong.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
 host-record=lodash.com,54.93.128.64
 host-record=s3.amazonaws.com,54.231.112.147
-host-record=www.researchgate.net,65.39.251.69
 host-record=c1.rgstatic.net,52.85.242.9
 host-record=c2.rgstatic.net,52.85.242.9
 host-record=c3.rgstatic.net,52.85.242.9
@@ -50,6 +49,9 @@ host-record=www.evernote.com,204.154.95.75
 host-record=dx.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
 host-record=hub.docker.com,52.22.228.13
+
+# Other
+host-record=www.researchgate.net,65.39.251.69
 
 # Microsoft
 host-record=s4w.cdn.skype.com,72.21.81.200
