--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -58,6 +58,7 @@ host-record=s4w.cdn.skype.com,72.21.81.200
 host-record=api.nuget.org,72.21.81.200
 host-record=amp.azure.net,72.21.81.200
 host-record=azurecomcdn.azureedge.net,72.21.81.200
+host-record=patient.azureedge.net,72.21.81.200
 
 # Cloudflare
 host-record=www.npmjs.com,104.16.109.31
