--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -35,7 +35,7 @@ host-record=www.meteor.com,52.45.223.217
 host-record=www.lesswrong.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
 host-record=lodash.com,54.93.128.64
-host-record=s3.amazonaws.com,54.231.112.147
+#host-record=s3.amazonaws.com,54.231.112.147
 host-record=c1.rgstatic.net,52.85.242.9
 host-record=c2.rgstatic.net,52.85.242.9
 host-record=c3.rgstatic.net,52.85.242.9
