--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -29,8 +29,8 @@ host-record=avatars-05.gitter.im,54.192.27.92
 host-record=developer.mozilla.org,52.85.242.6
 host-record=download.mozilla.org,52.10.102.219
 host-record=wiki.mozilla.org,52.89.171.193
-#host-record=addons.mozilla.org,52.89.239.72
-#host-record=discovery.addons.mozilla.org,52.89.239.72
+host-record=addons.mozilla.org,52.24.46.150
+host-record=discovery.addons.mozilla.org,52.24.46.150
 host-record=www.meteor.com,52.45.223.217
 host-record=www.lesswrong.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
