--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -65,6 +65,8 @@ host-record=patient.azureedge.net,72.21.81.200
 # Cloudflare
 host-record=www.npmjs.com,104.16.109.31
 host-record=replicate.npmjs.com,104.16.109.31
+host-record=cvedetails.com,104.16.109.31
+host-record=www.cvedetails.com,104.16.109.31
 
 # Google
 host-record=fonts.googleapis.com,173.194.220.95
