content.comicsnews.org

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -67,6 +67,7 @@ host-record=www.npmjs.com,104.16.109.31
 host-record=replicate.npmjs.com,104.16.109.31
 host-record=cvedetails.com,104.16.109.31
 host-record=www.cvedetails.com,104.16.109.31
+host-record=content.comicsnews.org,104.16.109.31
 
 # Google
 host-record=fonts.googleapis.com,173.194.220.95
