--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -69,42 +69,42 @@ host-record=cvedetails.com,104.16.109.31
 host-record=www.cvedetails.com,104.16.109.31
 host-record=content.comicsnews.org,104.16.109.31
 
-# Google
-host-record=fonts.googleapis.com,173.194.220.95
-host-record=google.com,216.58.211.100
-host-record=www.google.com,172.217.22.164
-host-record=google.ru,173.194.113.175
-host-record=www.google.ru,172.217.20.35
-# host-record=googlemail.l.google.com,173.194.220.17
-host-record=mail.google.com,173.194.220.17
-# host-record=play.l.google.com,173.194.222.200
-host-record=play.google.com,173.194.222.200
-# host-record=plus.l.google.com,173.194.222.196
-host-record=plus.google.com,173.194.222.196
-host-record=apis.google.com,173.194.222.196
-host-record=notifications.google.com,173.194.222.196
-host-record=books.google.com,216.58.219.206
-# host-record=books-wide.l.google.com,216.58.219.206
-host-record=docs.google.com,173.194.222.194
-# host-record=wide-docs.l.google.com,173.194.222.194
-# host-record=ytstatic.l.google.com,64.233.161.138
-host-record=s.ytimg.com,64.233.161.138
-# host-record=googlehosted.l.googleusercontent.com,64.233.165.132
-# host-record=photos-ugc.l.googleusercontent.com,64.233.165.132
-host-record=yt3.ggpht.com,64.233.165.132
-host-record=yt4.ggpht.com,64.233.165.132
-host-record=clients1.google.com,172.217.17.142
-host-record=clients2.google.com,172.217.17.142
-host-record=clients3.google.com,172.217.17.142
-host-record=clients4.google.com,172.217.17.142
-host-record=clients5.google.com,172.217.17.142
-host-record=clients6.google.com,172.217.17.142
-host-record=maps.gstatic.com,64.233.165.94
-#host-record=www3.l.google.com,64.233.165.101
-host-record=ogs.google.com,64.233.165.101
-host-record=hangouts.google.com,64.233.165.101
-host-record=developer.android.com,64.233.165.101
-host-record=www.android.com,64.233.165.101
+## Google
+#host-record=fonts.googleapis.com,173.194.220.95
+#host-record=google.com,216.58.211.100
+#host-record=www.google.com,172.217.22.164
+#host-record=google.ru,173.194.113.175
+#host-record=www.google.ru,172.217.20.35
+## host-record=googlemail.l.google.com,173.194.220.17
+#host-record=mail.google.com,173.194.220.17
+## host-record=play.l.google.com,173.194.222.200
+#host-record=play.google.com,173.194.222.200
+## host-record=plus.l.google.com,173.194.222.196
+#host-record=plus.google.com,173.194.222.196
+#host-record=apis.google.com,173.194.222.196
+#host-record=notifications.google.com,173.194.222.196
+#host-record=books.google.com,216.58.219.206
+## host-record=books-wide.l.google.com,216.58.219.206
+#host-record=docs.google.com,173.194.222.194
+## host-record=wide-docs.l.google.com,173.194.222.194
+## host-record=ytstatic.l.google.com,64.233.161.138
+#host-record=s.ytimg.com,64.233.161.138
+## host-record=googlehosted.l.googleusercontent.com,64.233.165.132
+## host-record=photos-ugc.l.googleusercontent.com,64.233.165.132
+#host-record=yt3.ggpht.com,64.233.165.132
+#host-record=yt4.ggpht.com,64.233.165.132
+#host-record=clients1.google.com,172.217.17.142
+#host-record=clients2.google.com,172.217.17.142
+#host-record=clients3.google.com,172.217.17.142
+#host-record=clients4.google.com,172.217.17.142
+#host-record=clients5.google.com,172.217.17.142
+#host-record=clients6.google.com,172.217.17.142
+#host-record=maps.gstatic.com,64.233.165.94
+##host-record=www3.l.google.com,64.233.165.101
+#host-record=ogs.google.com,64.233.165.101
+#host-record=hangouts.google.com,64.233.165.101
+#host-record=developer.android.com,64.233.165.101
+#host-record=www.android.com,64.233.165.101
 
 # Blocked
 host-record=linkedin.com,108.174.10.11
