Comment out www.researchgate.net, it's fine

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -52,8 +52,8 @@ host-record=dx.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
 host-record=hub.docker.com,54.209.102.157
 
-# Other
-host-record=www.researchgate.net,65.39.251.69
+## Other
+#host-record=www.researchgate.net,65.39.251.69
 
 # Microsoft
 host-record=s4w.cdn.skype.com,72.21.81.200
