Comment out Microsoft block, it's fine

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -55,12 +55,12 @@ host-record=hub.docker.com,54.209.102.157
 ## Other
 #host-record=www.researchgate.net,65.39.251.69
 
-# Microsoft
-host-record=s4w.cdn.skype.com,72.21.81.200
-host-record=api.nuget.org,72.21.81.200
-host-record=amp.azure.net,72.21.81.200
-host-record=azurecomcdn.azureedge.net,72.21.81.200
-host-record=patient.azureedge.net,72.21.81.200
+## Microsoft
+#host-record=s4w.cdn.skype.com,72.21.81.200
+#host-record=api.nuget.org,72.21.81.200
+#host-record=amp.azure.net,72.21.81.200
+#host-record=azurecomcdn.azureedge.net,72.21.81.200
+#host-record=patient.azureedge.net,72.21.81.200
 
 # Cloudflare
 host-record=www.npmjs.com,104.16.109.31
