--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -64,7 +64,7 @@ host-record=hub.docker.com,54.209.102.157
 
 # Cloudflare
 host-record=www.npmjs.com,104.16.109.31
-host-record=replicate.npmjs.com,104.16.109.31
+#host-record=replicate.npmjs.com,104.16.109.31
 host-record=cvedetails.com,104.16.109.31
 host-record=www.cvedetails.com,104.16.109.31
 host-record=content.comicsnews.org,104.16.109.31
