Most Slack domains are unblocked (except websockets)

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,6 +1,6 @@
 # Wildcards
 address=/.lb.slack-msgs.com/13.115.224.139
-address=/.slack.com/54.192.47.108
+#address=/.slack.com/54.192.47.108
 address=/.googleusercontent.com/64.233.165.132
 address=/.viewdocs.io/52.87.80.61 # tls:0
 #address=/.viewdocs.io/54.173.244.230
@@ -11,11 +11,11 @@ address=/.viewdocs.io/52.87.80.61 # tls:0
 # Amazon
 host-record=travis-ci.org,54.172.170.160
 host-record=travis-ci.com,54.172.170.160
-host-record=slack.com,52.85.217.57
+#host-record=slack.com,52.85.217.57
 host-record=everything.lb.slack-msgs.com,13.115.224.139
-host-record=slack-redir.net,52.203.31.227
-host-record=slack-imgs.com,54.230.92.27
-host-record=upload.slack.com,52.201.55.154
+#host-record=slack-redir.net,52.203.31.227
+#host-record=slack-imgs.com,54.230.92.27
+#host-record=upload.slack.com,52.201.55.154
 host-record=gitter.im,52.20.217.175
 host-record=ws.gitter.im,52.3.161.134
 host-record=cdn01.gitter.im,52.85.173.188
