--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,7 +1,7 @@
 # Wildcards
 address=/.lb.slack-msgs.com/13.115.224.139
 #address=/.slack.com/54.192.47.108
-address=/.googleusercontent.com/64.233.165.132
+#address=/.googleusercontent.com/64.233.165.132
 address=/.viewdocs.io/52.87.80.61 # tls:0
 #address=/.viewdocs.io/54.173.244.230
 #address=/.viewdocs.io/54.172.87.254
