--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -43,10 +43,10 @@ host-record=c2.rgstatic.net,52.85.242.9
 host-record=c3.rgstatic.net,52.85.242.9
 host-record=c4.rgstatic.net,52.85.242.9
 host-record=c5.rgstatic.net,52.85.242.9
-host-record=helpme.viber.com,50.17.89.124
-host-record=instagram.com,52.22.112.93
-host-record=evernote.com,204.154.95.75
-host-record=www.evernote.com,204.154.95.75
+#host-record=helpme.viber.com,50.17.89.124
+#host-record=instagram.com,52.22.112.93
+#host-record=evernote.com,204.154.95.75
+#host-record=www.evernote.com,204.154.95.75
 #host-record=dx.dyn.doi.org,54.191.229.235
 host-record=dx.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
