--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -16,8 +16,8 @@ host-record=everything.lb.slack-msgs.com,13.115.224.139
 #host-record=slack-redir.net,52.203.31.227
 #host-record=slack-imgs.com,54.230.92.27
 #host-record=upload.slack.com,52.201.55.154
-host-record=gitter.im,52.20.217.175
-host-record=ws.gitter.im,52.3.161.134
+#host-record=gitter.im,52.20.217.175
+#host-record=ws.gitter.im,52.3.161.134
 host-record=cdn01.gitter.im,52.85.173.188
 host-record=cdn02.gitter.im,52.85.173.188
 host-record=cdn03.gitter.im,52.85.173.188
