--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -50,7 +50,7 @@ host-record=c5.rgstatic.net,52.85.242.9
 #host-record=dx.dyn.doi.org,54.191.229.235
 host-record=dx.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
-host-record=hub.docker.com,54.209.102.157
+#host-record=hub.docker.com,54.209.102.157
 
 ## Other
 #host-record=www.researchgate.net,65.39.251.69
