Comment out download.mozilla.com
It's not entirely ublocked, but 7 out of 8 IPs are fine,
and they change too fast.

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -29,7 +29,7 @@ host-record=avatars-03.gitter.im,54.192.27.92
 host-record=avatars-04.gitter.im,54.192.27.92
 host-record=avatars-05.gitter.im,54.192.27.92
 host-record=developer.mozilla.org,52.85.242.6
-host-record=download.mozilla.org,52.11.248.173
+#host-record=download.mozilla.org,52.11.248.173
 #host-record=wiki.mozilla.org,52.89.171.193
 #host-record=addons.mozilla.org,52.24.46.150
 #host-record=discovery.addons.mozilla.org,52.24.46.150
