Comment out some unblocked entries

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -33,8 +33,8 @@ host-record=developer.mozilla.org,52.85.242.6
 #host-record=wiki.mozilla.org,52.89.171.193
 #host-record=addons.mozilla.org,52.24.46.150
 #host-record=discovery.addons.mozilla.org,52.24.46.150
-host-record=www.meteor.com,52.45.223.217
-host-record=www.lesswrong.com,52.45.223.217
+#host-record=www.meteor.com,52.45.223.217
+#host-record=www.lesswrong.com,52.45.223.217
 host-record=meteor.com,52.85.242.34
 host-record=lodash.com,35.154.87.217
 #host-record=s3.amazonaws.com,54.231.112.147
@@ -48,7 +48,7 @@ host-record=c5.rgstatic.net,52.85.242.9
 #host-record=evernote.com,204.154.95.75
 #host-record=www.evernote.com,204.154.95.75
 #host-record=dx.dyn.doi.org,54.191.229.235
-host-record=dx.doi.org,54.191.229.235
+#host-record=dx.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
 #host-record=hub.docker.com,54.209.102.157
 
