--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -51,6 +51,7 @@ host-record=c5.rgstatic.net,52.85.242.9
 #host-record=dx.doi.org,54.191.229.235
 host-record=avatar-cdn.atlassian.com,13.32.14.208
 #host-record=hub.docker.com,54.209.102.157
+host-record=api-p.sendbird.com,18.194.31.173
 
 ## Other
 #host-record=www.researchgate.net,65.39.251.69
