Amazon got unblocked

--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,5 +1,5 @@
 # Wildcards
-address=/.lb.slack-msgs.com/13.115.224.139
+#address=/.lb.slack-msgs.com/13.115.224.139
 #address=/.slack.com/54.192.47.108
 #address=/.googleusercontent.com/64.233.165.132
 #address=/.viewdocs.io/52.87.80.61 # tls:0
@@ -12,46 +12,46 @@ address=/.lb.slack-msgs.com/13.115.224.139
 #host-record=travis-ci.org,54.172.170.160
 #host-record=travis-ci.com,54.172.170.160
 #host-record=slack.com,52.85.217.57
-host-record=everything.lb.slack-msgs.com,13.115.224.139
+#host-record=everything.lb.slack-msgs.com,13.115.224.139
 #host-record=slack-redir.net,52.203.31.227
 #host-record=slack-imgs.com,54.230.92.27
 #host-record=upload.slack.com,52.201.55.154
 #host-record=gitter.im,52.20.217.175
 #host-record=ws.gitter.im,52.3.161.134
-host-record=cdn01.gitter.im,13.35.198.93
-host-record=cdn02.gitter.im,13.35.198.93
-host-record=cdn03.gitter.im,13.35.198.93
-host-record=cdn04.gitter.im,13.35.198.93
+#host-record=cdn01.gitter.im,13.35.198.93
+#host-record=cdn02.gitter.im,13.35.198.93
+#host-record=cdn03.gitter.im,13.35.198.93
+#host-record=cdn04.gitter.im,13.35.198.93
 #host-record=cdn05.gitter.im,13.35.198.93
-host-record=avatars-01.gitter.im,13.35.198.111
-host-record=avatars-02.gitter.im,13.35.198.111
-host-record=avatars-03.gitter.im,13.35.198.111
-host-record=avatars-04.gitter.im,13.35.198.111
-host-record=avatars-05.gitter.im,13.35.198.111
-host-record=developer.mozilla.org,52.85.242.6
+#host-record=avatars-01.gitter.im,13.35.198.111
+#host-record=avatars-02.gitter.im,13.35.198.111
+#host-record=avatars-03.gitter.im,13.35.198.111
+#host-record=avatars-04.gitter.im,13.35.198.111
+#host-record=avatars-05.gitter.im,13.35.198.111
+#host-record=developer.mozilla.org,52.85.242.6
 #host-record=download.mozilla.org,52.11.248.173
 #host-record=wiki.mozilla.org,52.89.171.193
 #host-record=addons.mozilla.org,52.24.46.150
 #host-record=discovery.addons.mozilla.org,52.24.46.150
 #host-record=www.meteor.com,52.45.223.217
 #host-record=www.lesswrong.com,52.45.223.217
-host-record=meteor.com,52.85.242.34
+#host-record=meteor.com,52.85.242.34
 host-record=lodash.com,142.93.108.123
 #host-record=s3.amazonaws.com,54.231.112.147
-host-record=c1.rgstatic.net,52.85.242.9
-host-record=c2.rgstatic.net,52.85.242.9
-host-record=c3.rgstatic.net,52.85.242.9
-host-record=c4.rgstatic.net,52.85.242.9
-host-record=c5.rgstatic.net,52.85.242.9
+#host-record=c1.rgstatic.net,52.85.242.9
+#host-record=c2.rgstatic.net,52.85.242.9
+#host-record=c3.rgstatic.net,52.85.242.9
+#host-record=c4.rgstatic.net,52.85.242.9
+#host-record=c5.rgstatic.net,52.85.242.9
 #host-record=helpme.viber.com,50.17.89.124
 #host-record=instagram.com,52.22.112.93
 #host-record=evernote.com,204.154.95.75
 #host-record=www.evernote.com,204.154.95.75
 #host-record=dx.dyn.doi.org,54.191.229.235
 #host-record=dx.doi.org,54.191.229.235
-host-record=avatar-cdn.atlassian.com,13.32.14.208
+#host-record=avatar-cdn.atlassian.com,13.32.14.208
 #host-record=hub.docker.com,54.209.102.157
-host-record=api-p.sendbird.com,18.194.31.173
+#host-record=api-p.sendbird.com,18.194.31.173
 
 ## Other
 #host-record=www.researchgate.net,65.39.251.69
