--- a/fuckrkn.conf
+++ b/fuckrkn.conf
@@ -1,4 +1,4 @@
-# Wildcards
+## Wildcards
 #address=/.lb.slack-msgs.com/13.115.224.139
 #address=/.slack.com/54.192.47.108
 #address=/.googleusercontent.com/64.233.165.132
@@ -8,7 +8,7 @@
 #address=/.viewdocs.io/54.174.71.128
 #address=/.viewdocs.io/54.164.102.190
 
-# Amazon
+## Amazon
 #host-record=travis-ci.org,54.172.170.160
 #host-record=travis-ci.com,54.172.170.160
 #host-record=slack.com,52.85.217.57
@@ -63,7 +63,7 @@ host-record=lodash.com,142.93.108.123
 #host-record=azurecomcdn.azureedge.net,72.21.81.200
 #host-record=patient.azureedge.net,72.21.81.200
 
-# Cloudflare
+## Cloudflare
 #host-record=www.npmjs.com,104.16.109.31
 #host-record=replicate.npmjs.com,104.16.109.31
 host-record=cvedetails.com,104.16.109.31
@@ -107,7 +107,7 @@ host-record=www.cvedetails.com,104.16.109.31
 #host-record=developer.android.com,64.233.165.101
 #host-record=www.android.com,64.233.165.101
 
-# Blocked
+## Blocked
 host-record=linkedin.com,108.174.10.11
 host-record=www.linkedin.com,108.174.10.11
 host-record=ru.linkedin.com,108.174.10.11
